# The-Village

./: AUTO_RECORDING_UPDATE.md  GET_SERVICE_KEY.md  QUICK_START.md  README.md  RECORDING_FIXED.md  RECORDING_GUIDE.md  SETUP_COMPLETE.md  SETUP_SIMPLIFIED.md  env.template  restart_agent.sh  start.sh  test_recording.py
backend/: .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  RAILWAY_DEPLOYMENT.md  README.md  ai_analyzer.py  database.py  deploy.sh  main.py  margaret.py  models.py  models_simple.py  pyproject.toml  railway.toml  requirements.txt  schema_simple.sql  test_imports.py  websocket_manager.py
backend/parkinson/: best_pd_model.pkl  run_model.py
backend/voice/: agent.py
frontend/src/components/call/: LiveTranscript.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  DemoConfig.tsx  LandingPage.tsx
transcripts/: call_047d4fc7_20260118_155719.json  call_07dfd973_20260118_160301.json  call_2141705e_20260118_021802.json  call_36fa28a7_20260118_155449.json  call_68241f0b_20260118_142855.json  call_77793010_20260118_143550.json  call_8a28e7f9_20260118_155915.json  call_99ed980c_20260118_143828.json  call_c2c37412_20260118_020847.json  call_c66f5fb0_20260118_015645.json  call_cb0e669e_20260118_020409.json  call_f05f64c2_20260118_020048.json  call_f0e49b8b_20260118_015552.json  string_20260118_005852.json
