[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-village-backend"
version = "1.0.0"
description = "The Village - AI Companion for Elderly Care"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # FastAPI & Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",

    # HTTP & Utilities
    "requests>=2.31.0",
    "httpx>=0.24.0",

    # Database
    "supabase>=2.3.4",

    # AI/LLM
    "google-genai>=0.2.0",

    # Audio processing and ML
    "librosa>=0.10.0",
    "pydub>=0.25.1",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",

    # LiveKit Core
    "livekit>=1.0.0",
    "livekit-api>=1.0.0",
    "livekit-agents[silero,turn-detector]>=1.3.0",

    # LiveKit Plugins
    "livekit-plugins-google>=1.3.0",
    "livekit-plugins-noise-cancellation>=0.2.0",
    "livekit-plugins-assemblyai>=1.3.0",
    "livekit-plugins-cartesia>=1.3.0",
]

[tool.setuptools]
packages = ["."]

[project.scripts]
app = "uvicorn:main:app"

[project.scripts]
start = "uvicorn:main:app"